<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/fondo"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t11"
            android:textStyle="italic"
            android:textColor="#000"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginTop="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t12"
            android:textStyle="italic"
            android:textColor="#000"
            android:textSize="25sp"
            android:textAlignment="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/d1"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:layout_marginTop="20dp"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/sig"
                    android:layout_weight="0.5"
                    android:background="@drawable/fondo_ima"
                    android:layout_margin="7dp"
                    android:onClick="siguiente"/>
               <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/bp"
                    android:layout_centerInParent="true"
                   android:layout_weight="1.5"
                   android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/url"
                    android:onClick="pagina"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/s1"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/b1"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/c1"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/z2"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"/>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>




